Bug 360711 - Plasma crash after running new session accidentally
Summary: Plasma crash after running new session accidentally
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.5.95
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-03-18 16:59 UTC by Marek Śledziona
Modified: 2016-03-29 22:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Śledziona 2016-03-18 16:59:58 UTC
Application: plasmashell (5.5.95)

Qt Version: 5.5.1
Frameworks Version: 5.20.0
Operating System: Linux 4.1.15-8-default x86_64
Distribution: "openSUSE Leap 42.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
Locked my desktop and then accidentally chose the 'New session' option. After that a new login screen was displayed, multimedia stopped (Amarok). Plasma encountered a crash after switching back to locked session and unlocking it.

- Unusual behavior I noticed:
After switching back to my session of Plasma Amarok resumed playback but it was laggy. After about 7-8 seconds of playing music disappeared for about a second or two. After that music started playing again and then stopped again for a number of times.

-- Backtrace:
Application: Plazma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa18f7ff800 (LWP 1559))]

Thread 17 (Thread 0x7fa17877a700 (LWP 1567)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa18dc41422 in  () at /usr/lib64/libxcb.so.1
#2  0x00007fa18dc4300f in xcb_wait_for_event () at /usr/lib64/libxcb.so.1
#3  0x00007fa17aefd3c9 in  () at /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 16 (Thread 0x7fa175728700 (LWP 1586)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa1853cee64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa18c6f7df8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 15 (Thread 0x7fa164d4d700 (LWP 1597)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa1853cee64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa18c6f7df8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 14 (Thread 0x7fa15f253700 (LWP 1605)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa1853cee64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa18c6f7df8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 13 (Thread 0x7fa15d5d3700 (LWP 1638)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa18eed986b in  () at /usr/lib64/libQt5Script.so.5
#2  0x00007fa18eed9899 in  () at /usr/lib64/libQt5Script.so.5
#3  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 12 (Thread 0x7fa0d69b8700 (LWP 1644)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa1853cee64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa18d293282 in  () at /usr/lib64/libQt5Quick.so.5
#7  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 11 (Thread 0x7fa0d58ec700 (LWP 1645)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 10 (Thread 0x7fa0c46ed700 (LWP 1846)):
#0  0x00007fa185410d14 in g_mutex_unlock () at /usr/lib64/libglib-2.0.so.0
#1  0x00007fa1853cee0e in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa0c5d41cf7 in KCupsConnection::run() () at /usr/lib64/libkcupslib.so
#7  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 9 (Thread 0x7fa0c1709700 (LWP 1872)):
#0  0x00007fa185410d14 in g_mutex_unlock () at /usr/lib64/libglib-2.0.so.0
#1  0x00007fa1853cdf20 in g_main_context_acquire () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853ced25 in  () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#4  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#7  0x00007fa0c1d6dc85 in  () at /usr/lib64/qt5/qml/QtQuick/XmlListModel/libqmlxmllistmodelplugin.so
#8  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#10 0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 8 (Thread 0x7fa0c0f08700 (LWP 1873)):
#0  0x00007fa188cf1bbd in poll () at /lib64/libc.so.6
#1  0x00007fa1853cee64 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007fa18961cd8b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1893e561a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#7  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#8  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 7 (Thread 0x7fa0b7b6c700 (LWP 1883)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 6 (Thread 0x7fa0b7218700 (LWP 1884)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7fa0a58bb700 (LWP 2009)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7fa09b5ee700 (LWP 2031)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7fa0a74dc700 (LWP 2159)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7fa09a33a700 (LWP 2195)):
#0  0x00007fa1884ff03f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007fa1893eb34b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007fa18d30625b in  () at /usr/lib64/libQt5Quick.so.5
#3  0x00007fa18d3066f3 in  () at /usr/lib64/libQt5Quick.so.5
#4  0x00007fa1893ea32f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007fa1884fb0a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007fa188cf9fed in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7fa18f7ff800 (LWP 1559)):
[KCrash Handler]
#6  0x00007fa18a757150 in QWidget::windowHandle() const () at /usr/lib64/libQt5Widgets.so.5
#7  0x00007fa0c69fbe51 in  () at /usr/lib64/qt5/qml/org/kde/plasma/private/taskmanager/libtaskmanagerplugin.so
#8  0x00007fa189602c48 in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007fa1895f68bc in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#10 0x00007fa18a72de7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#11 0x00007fa18a732cc8 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#12 0x00007fa1895c5e95 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#13 0x00007fa18961c77d in QTimerInfoList::activateTimers() () at /usr/lib64/libQt5Core.so.5
#14 0x00007fa18961caa1 in  () at /usr/lib64/libQt5Core.so.5
#15 0x00007fa1853cec84 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#16 0x00007fa1853ceed8 in  () at /usr/lib64/libglib-2.0.so.0
#17 0x00007fa1853cef7c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#18 0x00007fa18961cd6c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#19 0x00007fa1895c3d53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#20 0x00007fa1895cb8f6 in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#21 0x000000000041cea6 in  ()
#22 0x00007fa188c36b05 in __libc_start_main () at /lib64/libc.so.6
#23 0x000000000041d015 in _start ()

Reported using DrKonqi
Comment 1 Martin Klapetek 2016-03-21 22:19:48 UTC
Thanks for the report

Please install debug symbols for plasma-workspace and if you can
reproduce, please post an updated backtrace with new debug symbols.
Comment 2 David Edmundson 2016-03-28 23:55:17 UTC
Extra backtrace will just show it's the lamba in backend.cpp:357
Comment 3 David Edmundson 2016-03-29 22:04:18 UTC
Git commit b7faa415a404ac4715a7fe4eecf23709d7e18de1 by David Edmundson.
Committed on 29/03/2016 at 22:04.
Pushed by davidedmundson into branch 'Plasma/5.6'.

Guard round this delegate getting deleted during menu exec

Reviewers: #plasma

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1242

M  +4    -0    applets/taskmanager/plugin/backend.cpp

http://commits.kde.org/plasma-desktop/b7faa415a404ac4715a7fe4eecf23709d7e18de1