Guard round this delegate getting deleted during menu exec

BUG: 360711

Reviewers: #plasma

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1242